@@ -106,9 +106,9 @@ CREATE TABLE model_aggregator_feed
     aggregator_feed_id INTEGER UNSIGNED NOT NULL AUTO_INCREMENT,
     feed_md5 VARCHAR(32) NOT NULL,
     feed_url TEXT NOT NULL,
-    feed_link TEXT NOT NULL DEFAULT '',
+    feed_link TEXT NOT NULL,
     feed_title VARCHAR(100) NOT NULL,
-    feed_description TEXT NOT NULL DEFAULT '',
+    feed_description TEXT NOT NULL,
     feed_modified VARCHAR(100) NOT NULL DEFAULT '',
     feed_update_time INTEGER UNSIGNED NOT NULL DEFAULT 0,
     feed_status VARCHAR(3) NOT NULL DEFAULT '200',
@@ -142,7 +142,7 @@ CREATE TABLE model_aggregator_feed_item
     item_link TEXT NOT NULL, 
     item_title TEXT NOT NULL, 
     item_author VARCHAR(200) NOT NULL DEFAULT '', 
-    item_content TEXT NOT NULL, 
+    item_content TEXT NOT NULL NOT NULL DEFAULT '', 
     created_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00', 
     updated_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
     PRIMARY KEY (aggregator_feed_item_id),
@@ -213,7 +213,7 @@ CREATE TABLE model_user_blog_feed
     aggregator_feed_id INTEGER UNSIGNED NOT NULL,
     hash CHAR(8) NOT NULL,
     feed_title VARCHAR(100) NOT NULL,
-    feed_description TEXT NOT NULL DEFAULT '',
+    feed_description TEXT NOT NULL,
     ordering SMALLINT UNSIGNED NOT NULL DEFAULT 1,
     created_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
     updated_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
@@ -244,8 +244,8 @@ CREATE TABLE model_user_blog_queue_item
     aggregator_feed_item_id INTEGER UNSIGNED NOT NULL,
     user_blog_id INTEGER UNSIGNED NOT NULL,
     hash CHAR(8) NOT NULL,
-    title TEXT NOT NULL, 
-    description TEXT NOT NULL DEFAULT '',
+    item_title TEXT NOT NULL, 
+    item_content TEXT NOT NULL,
     created_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
     updated_at TIMESTAMP NOT NULL DEFAULT '0000-00-00 00:00:00',
     PRIMARY KEY (user_blog_queue_item_id),
