@@ -133,5 +133,6 @@ HORAS TRABALHADAS: 10h
 
 - Correcao de bug com timezone na atualizacao de feed
 - Bugfixes
+- Inclusao de metodo para inclusao de item no Queue
 
-HORAS TRABALHADAS: 4h
+HORAS TRABALHADAS: 6h
